--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -2,22 +2,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-app-flask
+  name: web-app
   namespace: app
   labels:
     course: clo835
     week: as2
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      name: web-app-flask
+      name: web-app
   template:
     metadata:
       labels:
-        name: web-app-flask
+        name: web-app
     spec:
       containers:
-      - name: web-app-flask
+      - name: web-app
         image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:app
-      
+        env:
+          - name: DBHOST
+            value: "mysql"
+          - name: DBPORT
+            value: "3306"
+          - name: DBUSER
+            value: "root"
+          - name: DBPWD
+            value: "pw"
+        ports:
+          - containerPort: 8080
+        imagePullPolicy: Always
