--- a/db/db-replicasets.yaml
+++ b/db/db-replicasets.yaml
@@ -1,24 +1,28 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
-  name: web-app-pod
-  namespace: webapp
+  name: mysql-replicas
+  namespace: sqldb
   labels:
     app: mysql
 spec:
   replicas: 3
-  containers:
-  - name: web-app
-    image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:app
-    env:
-      - name: DBHOST
-        value: 10.244.0.5
-      - name: DBPORT
-        value: "3306"
-      - name: DBUSER
-        value: "root"
-      - name: DBPWD
-        value: "pw"
-    ports:
-    - containerPort: 8080
-    imagePullPolicy: Always
+  selector:
+    matchLabels:
+      name: mysql
+  template:
+    metadata:
+      labels:
+        name: mysql
+    spec:
+      containers:
+      - name: mysql
+        image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:db
+        env:
+          - name: MYSQL_ROOT_USER
+            value: "root"
+          - name: MYSQL_ROOT_PASSWORD
+            value: "pw"
+        ports:
+          - containerPort: 3306
+        imagePullPolicy: Always
