--- a/app/app-replicasets.yaml
+++ b/app/app-replicasets.yaml
@@ -1,25 +1,35 @@
-apiVersion: v1
-kind: ReplicaSets
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
-  name: web-app-pod
+  name: web-app-replicas
   namespace: webapp
   labels:
     app: employees
     version: v1
 spec:
   replicas: 3
-  containers:
-  - name: web-app
-    image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:app
-    env:
-      - name: DBHOST
-        value: 10.244.0.5
-      - name: DBPORT
-        value: "3306"
-      - name: DBUSER
-        value: "root"
-      - name: DBPWD
-        value: "pw"
-    ports:
-    - containerPort: 8080
-    imagePullPolicy: Always
+  selector:
+    matchLabels:
+      app: employees
+      version: v1
+  template:
+    metadata:
+      labels:
+        app: employees
+        version: v1
+    spec:
+      containers:
+      - name: web-app
+        image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:app
+        env:
+          - name: DBHOST
+            value: 10.244.0.5
+          - name: DBPORT
+            value: "3306"
+          - name: DBUSER
+            value: "root"
+          - name: DBPWD
+            value: "pw"
+        ports:
+        - containerPort: 8080
+        imagePullPolicy: Always
