update app deployment manifest

--- a/app/app-deployment.yaml
+++ b/app/app-deployment.yaml
@@ -5,8 +5,8 @@ metadata:
   name: web-app
   namespace: webapp
   labels:
-    course: clo835
-    week: as2
+    app: employees
+    version: v1
 spec:
   replicas: 1
   selector:
