--- a/app/app-replicasets.yaml
+++ b/app/app-replicasets.yaml
@@ -23,7 +23,7 @@ spec:
         image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:app
         env:
           - name: DBHOST
-            value: 10.244.0.5
+            value: "mysql-svc.sqldb.svc.cluster.local"
           - name: DBPORT
             value: "3306"
           - name: DBUSER
