Update new deployment and service manifests for the web application version 2

--- a/app/app-service_2.yaml
+++ b/app/app-service_2.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web-app-svc
-  namespace: webapp
+  namespace: app:employees
   labels:
     app: employees
     version: v2
