--- a/app/app-service_2.yaml
+++ b/app/app-service_2.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web-app-svc
-  namespace: app:employees
+  namespace: app_employees
   labels:
     app: employees
     version: v2
