Update new deployment and service manifests for the web application version 2

--- a/app/app-deployment_2.yaml
+++ b/app/app-deployment_2.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: web-app
-  namespace: app-employees
+  namespace: webapp
   labels:
     app: employees
     version: v2
