update app deployment manifest v2 for update image path

--- a/app/app-deployment_2.yaml
+++ b/app/app-deployment_2.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: web-app
-        image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:app
+        image: 877646386798.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2:appv2
         env:
           - name: DBHOST
             value: "mysql-svc.sqldb.svc.cluster.local"
