update label, seletor for all app file

--- a/app/app-deployment.yaml
+++ b/app/app-deployment.yaml
@@ -11,11 +11,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      name: web-app
+      app: employees
   template:
     metadata:
       labels:
-        name: web-app
+        app: employees
     spec:
       containers:
       - name: web-app
